<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:background="@color/color_white" >

        <TextView
            android:id="@+id/activity_main_textview_subs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="17dp"
            android:layout_marginRight="17dp"
            android:text="@string/subs"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#330054a6"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/activity_main_textview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/activity_main_textview_subs"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:text="@string/logo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#330054a6"
            android:textSize="12sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" 
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_head"
                android:textColor="@color/color_gray"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screen_sub"
                android:textColor="@color/color_green"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
        
</LinearLayout>