<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_mat"
    android:orientation="vertical"
    android:weightSum="1" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/recent_listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_mat"
            android:clipToPadding="false"
            android:divider="@color/color_gray_light"
            android:dividerHeight="0.7dp"
            android:paddingBottom="10dp" >
        </ListView>

        <LinearLayout
            android:id="@+id/recent_empty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@color/color_white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/recent_empty_tittle"
                android:textColor="@color/color_green"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/recent_empty_body"
                android:textColor="@color/color_gray"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/recent_empty_footer"
                    android:textColor="@color/color_gray"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_menu_bottom_contacts" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_layout_bottom_menu"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="6dp"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/recent_recent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_bottom_recent_selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_menu_recent_text" 
                android:textColor="@color/color_green"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/recent_contacts"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_bottom_contacts" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_menu_contacts_text" 
                android:textColor="@color/color_gray"/>
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/recent_me"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_bottom_me"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_menu_me_text" 
                android:textColor="@color/color_gray"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
